--- a/package.json
+++ b/package.json
@@ -32,8 +32,5 @@
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"dotenv": "^16.0.3"
-	}
+	"type": "module"
 }
